Repository DataAccess Completed

--- a/看課程/appsettings.json
+++ b/看課程/appsettings.json
@@ -11,8 +11,9 @@
   //------
   "MongoDbSettings": {
     "ConnectionString": "mongodb://localhost:27017/JonTest",
-    "DatabaseName": "JonTest",
+    "DatabaseName": "JonTest"
     //這邊兩個JonTest是指向同一個東西ˋ
-  }
+  },
+  //"这个配置也是必要的，它提供了应用连接到数据库所需要的信息。没有多余的设置，这是基本的MongoDB配置。"
   //------
 }
