--- a/看課程/看課程.csproj
+++ b/看課程/看課程.csproj
@@ -18,8 +18,8 @@
     <None Remove="DataAccess\UserInfo\Entity\" />
     <None Remove="Repositories\Identity\" />
     <None Remove="Repositories\UserInfo\" />
-    <None Remove="Repositories\Identity\Interfaces\" />
     <None Remove="Repositories\UserInfo\Interfaces\" />
+    <None Remove="Repositories\Identity\Interface\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -37,8 +37,8 @@
     <Folder Include="DataAccess\UserInfo\Entity\" />
     <Folder Include="Repositories\Identity\" />
     <Folder Include="Repositories\UserInfo\" />
-    <Folder Include="Repositories\Identity\Interfaces\" />
     <Folder Include="Repositories\UserInfo\Interfaces\" />
+    <Folder Include="Repositories\Identity\Interface\" />
   </ItemGroup>
 
 </Project>
