儲存遊戲紀錄API
玩完一場要存遊戲data時若該用戶無任何遊戲紀錄，直接創建一筆doc並將該遊戲紀錄存入doc。若用戶遊戲資料已存在doc，該筆data納入該用戶遊戲doc底下

--- a/Xrun/Xrun.csproj
+++ b/Xrun/Xrun.csproj
@@ -29,6 +29,10 @@
     <None Remove="Service\UserInformation\Request\" />
     <None Remove="Service\UserInformation\Response\" />
     <None Remove="Service\UserInformation\Interface\" />
+    <None Remove="Service\GameData\" />
+    <None Remove="Service\GameData\Interface\" />
+    <None Remove="DataAccess\GameData\" />
+    <None Remove="Repositories\GameData\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -55,6 +59,10 @@
     <Folder Include="Service\UserInformation\Request\" />
     <Folder Include="Service\UserInformation\Response\" />
     <Folder Include="Service\UserInformation\Interface\" />
+    <Folder Include="Service\GameData\" />
+    <Folder Include="Service\GameData\Interface\" />
+    <Folder Include="DataAccess\GameData\" />
+    <Folder Include="Repositories\GameData\" />
   </ItemGroup>
 
 </Project>
