--- a/Xrun/appsettings.json
+++ b/Xrun/appsettings.json
@@ -10,8 +10,8 @@
 
   //------
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://localhost:27017/JonTest",
-    "DatabaseName": "JonTest"
+    "ConnectionString": "mongodb://localhost:27017/Xrun-staging",
+    "DatabaseName": "Xrun-staging"
     //這邊兩個JonTest是指向同一個東西ˋ
   },
   //"这个配置也是必要的，它提供了应用连接到数据库所需要的信息。没有多余的设置，这是基本的MongoDB配置。"
